// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`numericSelector() calls twice ReactDOM.render(<Selector props />, container) 1`] = `
<Selector
  cssClasses={
    Object {
      "item": "ais-numeric-selector--item custom-item",
      "root": "ais-numeric-selector custom-root cx",
      "select": "ais-numeric-selector custom-select",
    }
  }
  currentValue={1}
  options={
    Array [
      Object {
        "label": "first",
        "value": 1,
      },
      Object {
        "label": "second",
        "value": 2,
      },
    ]
  }
  setValue={[Function]}
  shouldAutoHideContainer={false}
/>
`;

exports[`numericSelector() calls twice ReactDOM.render(<Selector props />, container) 2`] = `
<Selector
  cssClasses={
    Object {
      "item": "ais-numeric-selector--item custom-item",
      "root": "ais-numeric-selector custom-root cx",
      "select": "ais-numeric-selector custom-select",
    }
  }
  currentValue={1}
  options={
    Array [
      Object {
        "label": "first",
        "value": 1,
      },
      Object {
        "label": "second",
        "value": 2,
      },
    ]
  }
  setValue={[Function]}
  shouldAutoHideContainer={false}
/>
`;

exports[`numericSelector() computes refined values and pass them to <Selector props /> 1`] = `
<Selector
  cssClasses={
    Object {
      "item": "ais-numeric-selector--item custom-item",
      "root": "ais-numeric-selector custom-root cx",
      "select": "ais-numeric-selector custom-select",
    }
  }
  currentValue={20}
  options={
    Array [
      Object {
        "label": "first",
        "value": 1,
      },
      Object {
        "label": "second",
        "value": 2,
      },
    ]
  }
  setValue={[Function]}
  shouldAutoHideContainer={false}
/>
`;
